--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,16 @@ services:
       - ~/.composer-docker/cache:/root/.composer/cache:delegated
       - ~/.composer:/var/www/.composerhost
       - ~/.ssh:/var/www/.ssh
+    environment:
+      DB_DSN: mysql:host=db;dbname=database
+      DB_TEST_DSN: mysql:host=dbtest;dbname=database_test
+      DB_USER: user
+      DB_PASS: pass
     ports:
       - '8000:80'
     links:
       - db
+      - dbtest
   db:
     image: mariadb:latest
     ports:
@@ -27,5 +33,17 @@ services:
       MYSQL_ROOT_PASSWORD: password
     volumes:
       - db_data:/var/lib/mysql
+  dbtest:
+    image: mariadb:latest
+    ports:
+      - 3306
+    environment:
+      MYSQL_DATABASE: database_test
+      MYSQL_USER: user
+      MYSQL_PASSWORD: pass
+      MYSQL_ROOT_PASSWORD: password
+    volumes:
+      - dbtest_data:/var/lib/mysql
 volumes:
   db_data:
+  dbtest_data:
