--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ env:
 
 before_install:
   - mysql -e 'CREATE DATABASE IF NOT EXISTS yii2_basic_tests;'
+  - nvm install node
 
 install:
   - travis_retry composer self-update && composer --version
