--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,12 +21,7 @@ jobs:
           - windows-latest
 
         php:
-          - "5.6"
-          - "7.0"
-          - "7.1"
-          - "7.2"
-          - "7.3"
-          - "7.4"
+          - "8.0"
           
     steps:
       - name: Checkout
@@ -72,7 +67,7 @@ jobs:
           restore-keys: |
             php${{ matrix.php }}-composer-${{ matrix.dependencies }}-
 
-      - name: Install dependencies with composer php PHP [5.6 - 7.4]
+      - name: Install dependencies with composer php PHP [8.0]
         run: composer update --prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi
 
       - name: Run tests with codeception
